Fix reserving cards and add shifts list.

--- a/src/components/MediciSolitaireCalculator/MediciSolitaireCalculator.scss
+++ b/src/components/MediciSolitaireCalculator/MediciSolitaireCalculator.scss
@@ -26,6 +26,9 @@
     margin: 4px;
     padding: 7px;
   }
+  .msc-shifts > span {
+    display: inline-block;
+  }
   .msc-card {
     display: block;
     padding: 7px;
